yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickandmortyapi-ingress
spec:
  defaultBackend:
    service:
      name: rickandmortyapi-service
      port:
        number: 80
